--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+.main {
+    flex: 1;
+}
 .margin {
     margin: 20px;
 }
@@ -30,6 +38,9 @@
 }
 footer {
     border-bottom: 30px solid #808285;
+    /* position: sticky;
+    bottom: 0;
+    width: 100vw; */
 }
 .wrap {
     line-break: anywhere;
