--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
     background-position: center 20%;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 40vh;
+    /* height: 40vh; */
 }
 .welcome {
     color: hsla(0, 0%, 100%, 0.63);
@@ -82,6 +82,40 @@ footer {
     max-width: 1200px;
     margin: 0 auto;
 }
+#footer-new {
+    border-bottom: none !important;
+}
+#footer-main {
+    padding: 2% 20% 5%;
+}
+/* #help-box {
+    padding-right: 130px;
+} */
+#call-box {
+    margin-top: 2.2em;
+}
+.call {
+    color: white;
+    font-size: 120px;
+    /* line-height: 100px; */
+    font-weight: 600;
+    /* margin: 200px auto; */
+}
+.needHelp {
+    display: block;
+    font-size: 50px;
+    color: #808285;
+    opacity: 0.61;
+    line-height: 34px;
+    font-weight: bold;
+}
+.footer-main-text {
+    color: #000;
+    font-size: 30px;
+    opacity: 0.5;
+    font-weight: bold;
+    line-height: 33px;
+}
 @media screen and (max-width: 767px) {
     .mphone {
         margin-bottom: 10px !important;
@@ -93,6 +127,23 @@ footer {
         width: 90%;
         margin-right: 0;
         margin-left: auto;
+    }
+    .footer-main-text {
+        font-size: 24px;
+    }
+    .needHelp {
+        font-size: 34px;
+        line-height: auto;
+    }
+    #call-box {
+        margin-top: auto;
+    }
+    .call {
+        font-size: 60px;
+        line-height: auto;
+    }
+    #footer-main {
+        padding: 2% auto 5%;
     }
 }
 @media screen and (max-width: 576px) {
@@ -113,5 +164,9 @@ footer {
     }
     .pxphone {
         padding: 0 10px !important;
+    }
+    #footer-main {
+        padding: 2% 0 5%;
+        text-align: start !important;
     }
 }
